--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         <h4 id="dish"></h4><span id="amount" class="amount"></span><span id="price" class="price"></span>
         <h4 id="dish"></h4><span id="amount" class="amount"></span><span id="price" class="price"></span>
 
+
+
+      <p class="total">Total :</p>
+      <span id="RM" class="RM"></span> <p id="totalPrice"></p>
      </div>
     </div>
    
